--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <head>
 	<title>CDTM Info Screen</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="jquery-1.11.0.min.js"></script>
-	<script src="./getpics.php"></script>
+	<script src="lib/jquery-1.11.0.min.js"></script>
+	<script src="lib/getpics.php"></script>
 </head> 
 
 <a href="home.html">Home</a>
@@ -55,7 +55,7 @@ Pictures Section
 <script>
 	// Load News Contents
 	$(document).ready(function() {
-	 	$('.news').load('./news.txt');
+	 	$('.news').load('news/news.txt');
 	});
 </script>
 
