add explicit mime type declaration for php

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 	<title>CDTM Info Screen</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="lib/jquery-1.11.0.min.js"></script>
-	<script src="lib/getpics.php"></script>
+	<script src="lib/getpics.php" type="text/php"></script>
 </head> 
 
 <a href="home.html">Home</a>
@@ -58,6 +58,8 @@ Pictures Section
 	 	$('.news').load('news/news.txt');
 	});
 </script>
+
+
 
 <script type="text/javascript">
 	// Load Pictures
